--- a/Confusion Matrix Binary Classification Breast Cancer Logistic Regression.ipynb
+++ b/Confusion Matrix Binary Classification Breast Cancer Logistic Regression.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "* Source blog: https://pieriantraining.com/confusion-matrix-with-scikit-learn-and-python/\n",
     "\n",
-    "##### Confusion Matrix:\n",
+    "##### Confusion Matrix: Measure of Classification Accuracy\n",
     "A confusion matrix is a table used to evaluate the performance of a machine learning algorithm. It shows how many samples were correctly or incorrectly classified by the algorithm in each class.\n",
     "\n",
     "The confusion matrix has two dimensions: actual and predicted. In binary classification, where there are only two classes (positive and negative), it looks like this:\n",
@@ -35,11 +35,11 @@
     "##### Confusion Matrix Use Cases:\n",
     "A confusion matrix is a commonly used tool in machine learning to evaluate the performance of a classification model. Here are some real-world or business use cases where a confusion matrix can be helpful:\n",
     "\n",
-    "* Fraud Detection: A bank uses a machine learning model to identify fraudulent transactions. The confusion matrix helps the bank understand how well the model is performing by showing the number of true positives, true negatives, false positives, and false negatives.\n",
-    "* Medical Diagnosis: A hospital uses a machine learning model to diagnose patients with a certain disease. The confusion matrix helps doctors understand how accurate the model is by showing the number of true positives, true negatives, false positives, and false negatives.\n",
-    "* Customer Churn Prediction: A company uses a machine learning model to predict which customers are likely to churn (stop using their service). The confusion matrix helps the company understand how well the model is performing by showing the number of true positives, true negatives, false positives, and false negatives.\n",
-    "* Sentiment Analysis: A social media platform uses a machine learning model to analyze user comments and determine if they are positive or negative. The confusion matrix helps the platform understand how accurate the model is by showing the number of true positives, true negatives, false positives, and false negatives.\n",
-    "* Image Classification: An e-commerce website uses a machine learning model to automatically classify product images into different categories like apparel or electronics. The confusion matrix helps them understand how well their image classification algorithm is performing by showing the number of true positives, true negatives, false positives and false negatives for each category."
+    "1. Fraud Detection: A bank uses a machine learning model to identify fraudulent transactions. The confusion matrix helps the bank understand how well the model is performing by showing the number of true positives, true negatives, false positives, and false negatives.\n",
+    "2. Medical Diagnosis: A hospital uses a machine learning model to diagnose patients with a certain disease. The confusion matrix helps doctors understand how accurate the model is by showing the number of true positives, true negatives, false positives, and false negatives.\n",
+    "3. Customer Churn Prediction: A company uses a machine learning model to predict which customers are likely to churn (stop using their service). The confusion matrix helps the company understand how well the model is performing by showing the number of true positives, true negatives, false positives, and false negatives.\n",
+    "4. Sentiment Analysis: A social media platform uses a machine learning model to analyze user comments and determine if they are positive or negative. The confusion matrix helps the platform understand how accurate the model is by showing the number of true positives, true negatives, false positives, and false negatives.\n",
+    "4. Image Classification: An e-commerce website uses a machine learning model to automatically classify product images into different categories like apparel or electronics. The confusion matrix helps them understand how well their image classification algorithm is performing by showing the number of true positives, true negatives, false positives and false negatives for each category."
    ]
   },
   {
@@ -305,8 +305,12 @@
    ],
    "source": [
     "# Plot the Confusion Matrix\n",
-    "from sklearn.metrics import plot_confusion_matrix\n",
-    "plot_confusion_matrix(model, X_test, y_test)"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=model.classes_)\n",
+    "disp.plot()\n",
+    "plt.show()"
    ]
   },
   {
@@ -417,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
