--- a/Iris dataset Multiclass Classification Decision Tree SVM KNN Naive Bayes.ipynb
+++ b/Iris dataset Multiclass Classification Decision Tree SVM KNN Naive Bayes.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "132172fa",
    "metadata": {},
    "outputs": [
@@ -203,10 +203,11 @@
        "  'sepal width (cm)',\n",
        "  'petal length (cm)',\n",
        "  'petal width (cm)'],\n",
-       " 'filename': '/opt/anaconda3/lib/python3.8/site-packages/sklearn/datasets/data/iris.csv'}"
+       " 'filename': 'iris.csv',\n",
+       " 'data_module': 'sklearn.datasets.data'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "84c96de6",
    "metadata": {},
    "outputs": [],
@@ -231,13 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "96ef7049",
    "metadata": {},
    "outputs": [],
    "source": [
     "# dividing X, y into train and test data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state = 0)"
    ]
   },
   {
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "d10f74ed",
    "metadata": {},
    "outputs": [],
@@ -264,19 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "3937d544",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[13,  0,  0],\n",
-       "       [ 0, 15,  1],\n",
-       "       [ 0,  3,  6]])"
+       "array([[11,  0,  0],\n",
+       "       [ 0, 13,  0],\n",
+       "       [ 0,  1,  5]], dtype=int64)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,6 +286,29 @@
     "# creating a confusion matrix\n",
     "cm = confusion_matrix(y_test, dtree_predictions)\n",
     "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4b9497b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9666666666666667"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model accuracy for X_test  \n",
+    "accuracyDecTree = dtree_model.score(X_test, y_test)\n",
+    "accuracyDecTree"
    ]
   },
   {
@@ -298,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "2edb5023",
    "metadata": {},
    "outputs": [],
@@ -311,17 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "ed6efe96",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9736842105263158"
+       "1.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,19 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "abf2d576",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[13,  0,  0],\n",
-       "       [ 0, 15,  1],\n",
-       "       [ 0,  0,  9]])"
+       "array([[11,  0,  0],\n",
+       "       [ 0, 13,  0],\n",
+       "       [ 0,  0,  6]], dtype=int64)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "641cab15",
    "metadata": {},
    "outputs": [],
@@ -380,17 +404,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "741d618a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin1\\anaconda3\\lib\\site-packages\\sklearn\\neighbors\\_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.9736842105263158"
+       "1.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,19 +435,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "1b41b631",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin1\\anaconda3\\lib\\site-packages\\sklearn\\neighbors\\_classification.py:228: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
+      "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[13,  0,  0],\n",
-       "       [ 0, 15,  1],\n",
-       "       [ 0,  0,  9]])"
+       "array([[11,  0,  0],\n",
+       "       [ 0, 13,  0],\n",
+       "       [ 0,  0,  6]], dtype=int64)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "7d24890b",
    "metadata": {},
    "outputs": [],
@@ -451,17 +491,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "a48c829d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9666666666666667"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,19 +514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "1582f4fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[13,  0,  0],\n",
-       "       [ 0, 16,  0],\n",
-       "       [ 0,  0,  9]])"
+       "array([[11,  0,  0],\n",
+       "       [ 0, 13,  0],\n",
+       "       [ 0,  1,  5]], dtype=int64)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "2896fa30",
    "metadata": {},
    "outputs": [
@@ -507,14 +547,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of SVM 0.9736842105263158\n",
-      "Accuracy of KNN 0.9736842105263158\n",
-      "Accuracy of NB 1.0\n"
+      "Accuracy of Decision Tree 0.9666666666666667\n",
+      "Accuracy of SVM 1.0\n",
+      "Accuracy of KNN 1.0\n",
+      "Accuracy of NB 0.9666666666666667\n"
      ]
     }
    ],
    "source": [
     "# Comparing accuracies of various algorithms (except Decision Tree )\n",
+    "print(\"Accuracy of Decision Tree\", accuracyDecTree)\n",
     "print(\"Accuracy of SVM\", accuracySVM)\n",
     "print(\"Accuracy of KNN\", accuracyKNN)\n",
     "print(\"Accuracy of NB\", accuracyNB)"
@@ -531,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -545,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
